--- a/src/components/Navbar/index.scss
+++ b/src/components/Navbar/index.scss
@@ -4,6 +4,7 @@
 			color: rgb(85, 85, 85);
 			cursor: pointer;
 			transition: color 200ms ease-in-out;
+			@apply py-3;
 
 			&:not(:last-child) {
 				padding-right: 1rem;
