--- a/src/components/Navbar/index.scss
+++ b/src/components/Navbar/index.scss
@@ -1,6 +1,6 @@
 #Navbar {
 	.nav-item {
-		color: rgb(85, 85, 85);
+		color: #555555;
 		cursor: pointer;
 		transition: color 200ms ease-in-out;
 		@apply py-3;
