--- a/src/index.scss
+++ b/src/index.scss
@@ -16,6 +16,7 @@
 	/* Font Family */
 	--font-family: 'Manrope', 'sans-serif', 'Noto Serif SC', 'Noto Serif TC',
 		'serif';
+	--text-secondary: #555555;
 }
 
 body {
