--- a/src/index.scss
+++ b/src/index.scss
@@ -8,8 +8,11 @@
 *,
 *::before,
 *::after {
-	box-sizing: border-box;
 	line-height: normal;
+
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	box-sizing: border-box;
 }
 
 :root {
@@ -23,4 +26,6 @@ body {
 	* {
 		font-family: var(--font-family);
 	}
+	height: 100%;
+	overflow-x: hidden;
 }
