--- a/src/components/Home/index.scss
+++ b/src/components/Home/index.scss
@@ -4,15 +4,15 @@
 	}
 
 	.text-block {
-		animation: article-load 300ms ease-in 1s;
+		animation: text-load 300ms ease-in 1s;
 		animation-fill-mode: forwards;
-		transform: translateY(-20px);
+		transform: translateY(20px);
 		opacity: 0;
 	}
 
-	@keyframes article-load {
+	@keyframes text-load {
 		0% {
-			transform: translateY(-20px);
+			transform: translateY(20px);
 			opacity: 0;
 		}
 
