--- a/src/index.scss
+++ b/src/index.scss
@@ -20,6 +20,7 @@
 	--font-family: 'Manrope', 'sans-serif', 'Noto Serif SC', 'Noto Serif TC',
 		'serif';
 	--text-secondary: #555555;
+	--divider: #aaaaaa;
 }
 
 body {
