--- a/src/components/Navbar/index.scss
+++ b/src/components/Navbar/index.scss
@@ -53,7 +53,7 @@
 			text-align: center;
 
 			.nav-item {
-				border-bottom: 1px solid rgb(168, 168, 168);
+				border-bottom: 1px solid var(--divider);
 
 				&:hover {
 					color: #ffbc00;
