--- a/src/components/ThreeDModeling/ThreeDModelingProjectDetails/LittleSkeleton/index.scss
+++ b/src/components/ThreeDModeling/ThreeDModelingProjectDetails/LittleSkeleton/index.scss
@@ -1,42 +1,5 @@
 #LittleSkeleton {
-	// .grid-item {
-	// 	// &:nth-child(even) {
-	// 	// 	text-align: end;
-	// 	// }
-	// }
-
-	// .rlx-row {
-	// 	display: flex;
-	// 	flex-wrap: wrap;
-	// 	padding: 0 4px;
-	// }
-
-	// /* Create four equal columns that sits next to each other */
-	// .rlx-column {
-	// 	flex: 25%;
-	// 	max-width: 25%;
-	// 	padding: 0 4px;
-	// }
-
-	// .rlx-column img {
-	// 	margin-top: 8px;
-	// 	vertical-align: middle;
-	// 	width: 100%;
-	// }
-
-	// /* Responsive layout - makes a two column-layout instead of four columns */
-	// @media screen and (max-width: 800px) {
-	// 	.rlx-column {
-	// 		flex: 50%;
-	// 		max-width: 50%;
-	// 	}
-	// }
-
-	// /* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
-	// @media screen and (max-width: 600px) {
-	// 	.rlx-column {
-	// 		flex: 100%;
-	// 		max-width: 100%;
-	// 	}
-	// }
+	.widget.CollageGridColumn {
+		background-color: #242424;
+	}
 }
